api-produto/ingress/deploy-bue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-blue
spec:
  selector:
    matchLabels:
      app: web-blue
  template:
    metadata:
      labels:
        app: web-blue
    spec:
      containers:
      - name: web
        image: fabricioveronez/web-page:blue
        resources: {}
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-blue
spec:
  selector:
    app: web-blue
  ports:
  - port: 80
    targetPort: 80
