api-produto/ingress/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dominio-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: blue.127.0.0.1.nip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-blue
              port:
                number: 80
    - host: api.127.0.0.1.nip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: minhaapi-api-service
              port:
                number: 8080
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: default-ingress
# spec:
#   ingressClassName: nginx
#   defaultBackend:
#     service:
#       name: minhaapi-api-service
#       port:
#         number: 8080
