api-produto/ingress/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: web-blue
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: minhaapi-api-service
                port:
                  number: 8080
